<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cart">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/cart"
            android:src="@drawable/cart"
            android:text="@string/back"
            android:textColor="@color/text_secondary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_title"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvCartCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/primary"
        android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvResCount"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subtitleString"
        android:layout_margin="32dp"
        android:textSize="24sp"
        android:text="@string/total_price"
        android:id="@+id/tvTotalPrice"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/check_out"
        android:textSize="32sp"
        android:id="@+id/btnCheckout"
        app:rippleColor="@color/ripple_color"
        />

</androidx.appcompat.widget.LinearLayoutCompat>