<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    style="@style/Card"
    android:layout_width="160dp"
    android:layout_height="270dp"
    android:layout_margin="10dp"
    android:padding="10dp"
    cardView:cardCornerRadius="16dp"
    cardView:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/flower_image"
            cardView:layout_constraintBottom_toTopOf="@+id/tvName"
            cardView:layout_constraintEnd_toEndOf="parent"
            cardView:layout_constraintHeight_percent="0.5"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            style="@style/subtitleString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            cardView:layout_constraintBottom_toTopOf="@+id/tvPrice"
            tools:layout_editor_absoluteX="5dp" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/subtitleString"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            cardView:layout_constraintBottom_toTopOf="@+id/tvQuantity"
            cardView:layout_constraintEnd_toStartOf="@+id/btnAddToCart"
            cardView:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvQuantity"
            style="@style/subtitleString"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnAddToCart"
            style="@style/CardButton"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/cart"
            android:src="@drawable/add_to_cart"
            cardView:layout_constraintStart_toEndOf="@+id/tvQuantity"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btnRemoveFromCart"
            style="@style/CardButton"
            android:contentDescription="@string/remove_from_cart"
            android:src="@drawable/remove_from_cart"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
