<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:textAlignment="center"
        android:text="@string/back"
        android:textColor="@color/background"
        android:background="@drawable/rounded_textedit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Rose"
        android:background="@drawable/rounded_textedit"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toStartOf="@id/spnCat"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <Spinner
        android:id="@+id/spnCat"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_textedit"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:padding="8dp"
        android:id="@+id/tvResCount"
        app:layout_constraintTop_toBottomOf="@+id/inStock"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.65"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tvResCount"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/recycler_view_item" />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvResCount"
        android:id="@+id/inStock"
        android:text="@string/in_stock_only"
        android:background="@drawable/rounded_textedit"
        />
    <com.google.android.material.slider.RangeSlider
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/inStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        android:id="@+id/slider"
        android:valueFrom="0"
        android:valueTo="120"
        android:stepSize="1"
        android:background="@drawable/rounded_textedit"
        app:layout_constraintBottom_toTopOf="@+id/tvResCount"
        />







</androidx.constraintlayout.widget.ConstraintLayout>